# aidu-ai-llm

./: .env_example  .gitignore  LICENSE  Makefile  README.md  debug.sh  debug_api.py  package-lock.json  pyproject.toml
manuals/: architecture.mmd  deploy.md  inheritance.mmd  quickstart.ipynb
serve/: app.py
src/aidu/ai/agents/: chat_bot.py  chat_bot_ag.py  chem_applet_tutor.py  chem_assessor.py  chem_student.py  chem_tutor.py  math_student.py  math_tutor.py  student.py  symbolic_solver.py
src/aidu/ai/core/: __init__.py  agent_result.py  applet_info.py  artifacts.py  belief.py  config.py  context.py  context_store.py  hookspecs.py  processor_result.py  protocols.py  recommendation.py  session.py
src/aidu/ai/llm/: actor.py  agent.py  agent_runner.py  assistant.py  builder.py  client.py  evaluator.py  fc_requester.py  plugin.py  prompter.py  requester.py  safeformat.py  spec.py  tool_registry.py
src/aidu/ai/llm/actors/: __init__.py  mathTutor.py
src/aidu/ai/llm/agents/: mathTutor.py
src/aidu/ai/llm/assistants/: __init__.py  mathAssistent_ass.py  mathTutor.py  mathTutor_ass.py
src/aidu/ai/llm/clients/: google.py  llm.py  openai.py  sympy.py
src/aidu/ai/llm/demo/: app.py
src/aidu/ai/llm/demo/web/: index.html  index.solidjs.html
src/aidu/ai/llm/demo/web/assets/: index-D9Tf7HU9.js  index-DmqsIvq3.js  index-Du3ra_yZ.js  index-lpcRtpuO.js
src/aidu/ai/llm/evaluators/: __init__.py  math_extractor.py  uncertainty.py
src/aidu/ai/llm/solver/: MathSolver.py
src/aidu/ai/symbolic/: engine.py
src/aidu/ai/symbolic/engines/: SymbolicSolver.py
test/: curl_tests.sh
tests/: test_agent_runner.py  test_applet_info.py  test_begin_agent.py  test_chem_applet_tutor_prompt.py  test_chem_student.py  test_openai_streaming.py  test_requester_trace_contract.py
web/: HELP.md  Makefile  index.html  index.solidjs.html  package-lock.json  package.json  vite.config.solidjs.ts  vite.config.ts
web/src/: main.ts  main.tsx  main_solidjs.tsx  vite-env.d.ts
