[project]
name = "aidu-ai-llm"
version = "0.1.6"
description = "LLM abstraction layer for the AIDu ecosystem."
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "aidu-support",

    "pydantic>=2.0",
    "rich>=14.3.2",

    "python-dotenv>=0.19.0,<1.0.0",

    "openai>=1.0.0,<2.0.0",
    "google-genai>=0.3.0",

    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",

    "requests>=2.31.0",
    "sympy>=1.11.0",
    "pluggy>=1.0",
    "prompt-toolkit>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff",
    "black",
]

[project.scripts]
aidu-ai-llm-example = "aidu.ai.llm.demo.app:main"

[project.entry-points."aidu"]
llm = "aidu.ai.llm.plugin:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]


[tool.hatch.build.targets.wheel]
sources = { "src" = "" }
packages = ["src/aidu"]

[tool.hatch.build]
include = [
    "src/aidu/ai/llm/demo/web/**",
]

[tool.uv.sources]
aidu-support = { path = "../aidu-support", editable = true }

[tool.ruff]
line-length = 180
exclude = ["__pycache__", "build", "dist", ".venv", "web/node_modules"]

[tool.black]
line-length = 180
target-version = ["py311"]